src/objects/BatchJobScheduler__c.object
<CustomObject>
    <fields>
        <fullName>Batch_End_Time__c</fullName>
        <label>Batch End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <defaultValue>&quot;Job Submitted on &quot;+ TEXT(Now())</defaultValue>
        <label>Batch Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Start_Time__c</fullName>
        <label>Batch Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Job Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Failed_Values__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Failed Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Success_Values__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Success Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cong-County Batch Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Name__c</columns>
        <columns>Batch_Start_Time__c</columns>
        <columns>Batch_End_Time__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Number_of_Success_Values__c</columns>
        <columns>Number_of_Failed_Values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>BatchJobScheduler Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cong-County Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>